--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "sass": "sass --watch public/assets/scss/style.scss:public/assets/css/style.css"
   },
   "dependencies": {
-    "next": "^15.1.1",
-    "react": "18.2.0",
-    "react-bootstrap": "^2.7.0",
-    "react-dom": "18.2.0",
+    "bootstrap": "^5.3.3",
+    "next": "15.2.1",
+    "react": "18.3.1",
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "18.3.1",
     "react-modal-video": "^2.0.0",
     "react-slick": "^0.29.0",
     "sass": "^1.56.1",
@@ -24,6 +25,6 @@
   },
   "devDependencies": {
     "eslint": "^8.31.0",
-    "eslint-config-next": "^13.1.1"
+    "eslint-config-next": "15.2.1"
   }
 }
